--- a/twitch.css
+++ b/twitch.css
@@ -23,6 +23,23 @@ p {
     margin: auto;
 }
 
+img {
+    height: 50px;
+    width: 50px;
+    border: 3px solid grey;
+    border-radius: 30px;
+    margin: auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover .profileName {
+    text-decoration: underline;
+}
+
+
 .container {
     height: 900px;
     min-width: 600px;
